feat：启动报错调整